# schmu

./: .gitattributes  .gitignore  .ocamlformat  .woodpecker.yml  .woodpecker_release.sh  README.md  borrowtest.smu  dune-project  flake.nix  newiter.smu  schmu-mode.el  schmu.opam  schmu.opam.locked
lib/: Makefile  ast.ml  ast.mli  builtin.ml  byval.cpp  cleaned_types.ml  cleaned_types.mli  codegen.ml  codegen.mli  configure.sh  deps.ml  dune  env.ml  env.mli  indent.ml  lexer.mll  link.ml  malloc_types.ml  mallocs.ml  map_module.ml  map_ttree.ml  mod_id.ml  module.ml  module.mli  module_common.ml  module_type.ml  module_type.mli  monomorph.ml  monomorph2.ml  monomorph_tree.ml  monomorph_tree.mli  monomorph_tree_intf.ml  newsyntax.mly  parser.mly  polyvars.ml  semicolons.ml  syntax_errors.messages  typed_tree.ml  types.ml  typing.ml  (+2 more)
lib/codegen/: abi.ml  abi_intf.ml  arr.ml  arr_intf.ml  autogen.ml  autogen_intf.ml  codegen.ml  codegen.mli  helpers.ml  lltypes.ml  lltypes_intf.ml  llvm_types.ml  rc.ml  size_align.ml
lib/typing/: borrow_call.ml  borrows.ml  borrows.mli  env.ml  env.mli  error.ml  exclusivity.ml  inference.ml  inference.mli  path.ml  patternmatching.ml  patternmatching.mli  records.ml  records.mli  subscript.ml  typed_tree.ml  types.ml  types.mli  typing.ml  typing.mli
std/: array.smu  deque.smu  dune  float.smu  fmt.smu  hashtbl.smu  in_channel.smu  int.smu  iter.smu  libc.linux.smu  libc.macos.smu  option.smu  prelude.smu  random.smu  rc.smu  run.t  schubfach.smu  set.smu  std.smu  string.smu  sys.smu  unsafe.smu
test/: dune  typing.ml  valgrind_wrapper_dummy.ml  valgrind_wrapper_real.ml
test/autogen.t/: arr_of_strings.smu  closure.smu  copy_array.smu  copy_string_lit.smu  free_nested.smu  rc.smu  records.smu  run.t  string_lit.smu  variants.smu
test/functions.t/: binop.smu  closure.smu  closure_dtor.smu  closure_inference.smu  closure_move_upward.smu  closures_to_env.smu  failwith.smu  fib.smu  first_class.smu  generic_fun_arg.smu  generic_pass.smu  if_return_void.smu  indirect_closure.smu  inner_recursive_closure_call.smu  man_or_boy.smu  mix_preface.smu  monomorph_later.smu  monomorph_nested.smu  monomorph_variable.smu  multi_params.smu  nested_closure_allocs.smu  nested_polymorphic_closures.smu  nested_recursive.smu  no_closure_returns.smu  no_closures.smu  no_lambda_let_poly_monomorph.smu  overwrite_params.smu  partial_application.smu  pass_self_recursive.smu  pass_self_recursive2.smu  poly_fn_ret_fn.smu  polymorphic_lambda_argument.smu  recursive_closure.smu  run.t  selfrec_fun_param.smu  shadow_external1.smu  shadow_external2.smu  shadowing.smu  shadowing2.smu  tailrec_mutable.smu  (+1 more)
test/functions.t.not/: generic_pass.smu  if_return_void.smu  run.t.not  shadowing.smu
test/memory.t/: array_drop_back.smu  array_push.smu  capture_record_pattern.smu  closure_monomorph.smu  const_fixed_arr.smu  decr_rc_if.smu  find_mut_delete_case.smu  fixed_array_allocs.smu  free_array.smu  free_cond.smu  free_moved_param.smu  free_param_parts.smu  global_let.smu  incr_str_lit_ifs.smu  leak.smu  match_partial_move.smu  match_partial_move_followup_leak.smu  mut_nonconst.smu  mutable_inner_let.smu  partial_move_in_record.smu  partial_rc.smu  propagate_local_owns.smu  rc_ifs.smu  rc_linear_closed_return.smu  reenter_parent.smu  regression_issue_19.smu  regression_issue_26.smu  regression_issue_30.smu  return_closure.smu  return_fn.smu  run.t  set_partial_parent.smu  take_partial_alloc.smu  take_partial_alloc_reorder.smu  upward_mut.smu
test/misc.t/: abi.smu  args.smu  array_drop_back.smu  array_push.smu  assert.smu  boolean_logic.smu  borrow_string_lit.smu  capture_record_pattern.smu  closure_monomorph.smu  cname_decl.smu  codegen_recursive.smu  codegen_recursive2.smu  const_fixed_arr.smu  curry_pipe.smu  decr_rc_if.smu  elseif.smu  find_fn.smu  fixed_array_allocs.smu  free_array.smu  free_cond.smu  free_moved_param.smu  free_param_parts.smu  free_vector.smu  function_array.smu  function_call_annot.smu  global_let.smu  if_no_else.smu  if_ret_param.smu  incr_str_lit_ifs.smu  m2.smu  miscompile_variant_parents.smu  mutable_inner_let.smu  mutual_rec.smu  no_unmutated_warning.smu  partials.smu  pattern_decls.smu  piping.smu  polymorphic_mutual_rec.smu  rc_cycle.smu  rc_ifs.smu  (+19 more)
test/misc.t.not/: boolean_logic.smu  cname_decl_wrong.smu  free_vector.smu  if_no_else.smu
test/modules.t/: a.smu  async.smu  async_borrow_call.smu  b.smu  c.smu  consume_dir.smu  decl_lambda.smu  direct_dep.smu  err_local_otherfile.smu  filename_nameclash.smu  functor_app_err.smu  functor_in_local.smu  functor_inner_module.smu  global_from_sign.smu  hidden_functor_app.smu  import_lets.smu  import_nonpoly_func.smu  import_poly_func.smu  import_prelude.smu  init.smu  inner_module_externals.smu  lets.smu  local_functor.smu  local_import_lets.smu  local_import_nonpoly_func.smu  local_import_poly_func.smu  local_module.smu  local_module_shadowing.smu  local_module_type_shadowing.smu  local_open_lets.smu  local_open_nonpoly_func.smu  local_open_poly_func.smu  local_otherfile.smu  malloc_some.smu  mutable_global_state.smu  mutable_global_state_submodule.smu  nameclash_mod.smu  nameclash_use.smu  nested_fn.smu  nonpoly_func.smu  (+32 more)
test/mutable_value_semantics.t/: array_copies.smu  array_in_record_copies.smu  borrow_call_move_once.smu  borrow_call_nest.smu  borrow_moves.smu  codegen_nested_projections.smu  const_let.smu  copies.smu  dyn_partial_move.smu  hidden_match_reference.smu  member_refcounts.smu  modify_in_fn.smu  mut_alias.smu  mutable_locals.smu  nested_array.smu  partial_move_set.smu  partially_move_parameter.smu  pass_array_param.smu  projection_warnings.smu  ptr_to_c.smu  ref_to_const.smu  run.t  simple_set.smu  unneeded_mut.smu  varid_propagate.smu
test/records.t/: borrowed_poly_fn.smu  closure.smu  create.smu  free_missing_fields.smu  free_nested.smu  function_fields.smu  misaligned_get.smu  missing_parameter.smu  nested.smu  nested_init_let.smu  nested_prealloc.smu  parametrized_get.smu  parametrized_pass.smu  pass.smu  run.t  simple.smu
test/std.t/: array.smu  fmt.smu  hashtbl_test.smu  (+8 more)
(+59 files in other folders)
