(library
 (name schmulang)
 (preprocess
  (pps ppx_deriving.show ppx_sexp_conv))
 (libraries
  llvm
  llvm.analysis
  llvm.target
  llvm.all_backends
  llvm.passmgr_builder
  llvm.scalar_opts
  menhirLib
  sexplib0
  csexp)
 (foreign_archives byval))

(rule
 ; (alias build-raylib)
 (targets libbyval.a dllbyval.so)
 (deps byval.cpp configure.sh)
 (action
  (no-infer
   (progn
    (run make)))))

;; The typing subfolder is part of this library

(include_subdirs unqualified)

(menhir
 (modules parser)
 (flags --explain))

(ocamllex
 (modules lexer))

;; The following two rules create a copy of the file parser.mly named
;; unitActionsParser.mly. This is a copy of the grammar where the semantic
;; actions have been removed and replaced with unit values. It is compiled
;; by Menhir's table back-end to obtain the module UnitActionsParser.

;; The use of [--external-tokens Parser] is required for the two parsers
;; to share a single [token] type. This makes them usable with the same
;; lexer.

(rule
 (action
  (with-stdout-to
   unitActionsParser.mly
   (run menhir %{dep:parser.mly} --only-preprocess-u))))

(menhir
 (modules unitActionsParser)
 (flags --table --external-tokens Parser))

;; This section deals with the .messages file.

;; The following rule generates "syntax_errors.ml" based on the source file
;; "syntax_errors.messages". It requires the completeness check to have been
;; performed first. (If desired, this check could be disabled.)

(rule
 (deps syntax_errors.check)
 (action
  (with-stdout-to
   syntax_errors.ml
   (run
    menhir
    %{dep:parser.mly}
    --compile-errors
    %{dep:syntax_errors.messages}))))

;; This rule generates a file "syntax_errors.auto.messages" that contains a
;; list of all error states. It is used by the completeness check.

(rule
 (with-stdout-to
  syntax_errors.auto.messages
  (run menhir %{dep:parser.mly} --list-errors)))

;; This rule implements the completeness check. It checks that every error
;; state listed in the auto-generated file "syntax_errors.auto.messages"
;; is also listed in the file "syntax_errors.messages" that is maintained
;; by the programmer.

(rule
 (with-stdout-to
  syntax_errors.check
  (run
   menhir
   %{dep:parser.mly}
   --compare-errors
   %{dep:syntax_errors.auto.messages}
   --compare-errors
   %{dep:syntax_errors.messages})))
