(rule
 (targets
  array.o
  array.smi
  hashtbl.o
  hashtbl.smi
  option.o
  option.smi
  prelude.o
  prelude.smi
  std.o
  std.smi
  string.o
  string.smi)
 (deps std.smu %{bin:schmu} array.smu string.smu hashtbl.smu prelude.smu)
 (action
  (progn
   (run schmu -m --no-std prelude.smu)
   (run schmu -m --no-std array.smu)
   (run schmu -m --no-std string.smu)
   (run schmu -m --no-std option.smu)
   (run schmu -m --no-std hashtbl.smu)
   (run schmu -m --no-std std.smu))))

(install
 (section
  (site
   (schmu std)))
 (files
  std.smu
  (std.smi as std/std.smi)
  (std.o as std/std.o)
  array.smu
  (array.smi as std/array.smi)
  (array.o as std/array.o)
  string.smu
  (string.smi as std/string.smi)
  (string.o as std/string.o)
  option.smu
  (option.smi as std/option.smi)
  (option.o as std/option.o)
  hashtbl.smu
  (hashtbl.smi as std/hashtbl.smi)
  (hashtbl.o as std/hashtbl.o)
  prelude.smu
  (prelude.smi as std/prelude.smi)
  (prelude.o as std/prelude.o)))
