(rule
 (targets string.o string.smi)
 (deps
  %{bin:schmu}
  string.smu
  array.smi
  iter.smi
  libc.smi
  option.smi
  prelude.smi)
 (action
  (progn
   (run schmu --release -m --no-std string.smu))))

(rule
 (targets array.o array.smi)
 (deps %{bin:schmu} array.smu prelude.smi option.smi iter.smi)
 (action
  (progn
   (run schmu --release -m --no-std array.smu))))

(rule
 (targets set.o set.smi)
 (deps
  %{bin:schmu}
  set.smu
  prelude.smi
  option.smi
  iter.smi
  rc.smi
  string.smi)
 (action
  (progn
   (run schmu --release -m --no-std set.smu))))

(rule
 (targets int.o int.smi)
 (deps %{bin:schmu} int.smu)
 (action
  (progn
   (run schmu --release -m --no-std int.smu))))

(rule
 (targets fmt.o fmt.smi)
 (deps
  %{bin:schmu}
  fmt.smu
  array.smi
  iter.smi
  libc.smi
  prelude.smi
  schubfach.smi
  string.smi
  unsafe.smi)
 (action
  (progn
   (run schmu --release -m --no-std fmt.smu))))

(rule
 (targets schubfach.o schubfach.smi)
 (deps
  %{bin:schmu}
  schubfach.smu
  int.smi
  prelude.smi
  unsafe.smi
  string.smi
  array.smi)
 (action
  (progn
   (run schmu --release -m --no-std schubfach.smu))))

(rule
 (targets float.o float.smi)
 (deps %{bin:schmu} float.smu)
 (action
  (progn
   (run schmu --release -m --no-std float.smu))))

(rule
 (targets prelude.o prelude.smi)
 (deps %{bin:schmu} prelude.smu libc.smi)
 (action
  (progn
   (run schmu --release -m --no-std prelude.smu))))

(rule
 (targets hashtbl.o hashtbl.smi)
 (deps
  %{bin:schmu}
  hashtbl.smu
  option.smi
  prelude.smi
  array.smi
  string.smi
  unsafe.smi)
 (action
  (progn
   (run schmu --release -m --no-std hashtbl.smu))))

(rule
 (targets sys.o sys.smi)
 (deps %{bin:schmu} sys.smu array.smi string.smi unsafe.smi prelude.smi)
 (action
  (progn
   (run schmu --release -m --no-std sys.smu))))

(rule
 (targets in_channel.o in_channel.smi)
 (deps
  %{bin:schmu}
  in_channel.smu
  array.smi
  iter.smi
  option.smi
  prelude.smi
  string.smi
  unsafe.smi)
 (action
  (progn
   (run schmu --release -m --no-std in_channel.smu))))

(rule
 (targets option.o option.smi)
 (deps %{bin:schmu} option.smu)
 (action
  (progn
   (run schmu --release -m --no-std option.smu))))

(rule
 (targets unsafe.o unsafe.smi)
 (deps %{bin:schmu} unsafe.smu)
 (action
  (progn
   (run schmu --release -m --no-std unsafe.smu))))

(rule
 (targets iter.o iter.smi)
 (deps %{bin:schmu} iter.smu prelude.smi)
 (action
  (progn
   (run schmu --release -m --no-std iter.smu))))

(rule
 (targets rc.o rc.smi)
 (deps %{bin:schmu} rc.smu prelude.smi option.smi)
 (action
  (progn
   (run schmu --release -m --no-std rc.smu))))

(rule
 (targets libc.o libc.smi)
 (deps %{bin:schmu} libc.macos.smu)
 (enabled_if
  (= %{system} macosx))
 (action
  (progn
   (run schmu --release -m --no-std -o libc libc.macos.smu)
   (copy libc.linux.smu libc.smu))))

(rule
 (targets libc.o libc.smi)
 (deps %{bin:schmu} libc.linux.smu)
 (enabled_if
  (or
   (= %{system} linux)
   (= %{system} linux_elf)
   (= %{system} elf)))
 (action
  (progn
   (run schmu --release -m --no-std -o libc libc.linux.smu)
   (copy libc.linux.smu libc.smu))))

(rule
 (alias stdlib)
 (targets std.o std.smi)
 (deps
  %{bin:schmu}
  array.smi
  float.smi
  hashtbl.smi
  in_channel.smi
  int.smi
  iter.smi
  prelude.smi
  rc.smi
  std.smu
  string.smi
  sys.smi
  unsafe.smi
  fmt.smi)
 (action
  (progn
   (run schmu --release -m --no-std std.smu))))

(install
 (section
  (site
   (schmu std)))
 (files
  std.smu
  (std.smi as std/std.smi)
  (std.o as std/std.o)
  array.smu
  (array.smi as std/array.smi)
  (array.o as std/array.o)
  string.smu
  (string.smi as std/string.smi)
  (string.o as std/string.o)
  option.smu
  (option.smi as std/option.smi)
  (option.o as std/option.o)
  hashtbl.smu
  (hashtbl.smi as std/hashtbl.smi)
  (hashtbl.o as std/hashtbl.o)
  prelude.smu
  (prelude.smi as std/prelude.smi)
  (prelude.o as std/prelude.o)
  in_channel.smu
  (in_channel.smi as std/in_channel.smi)
  (in_channel.o as std/in_channel.o)
  float.smu
  (float.smi as std/float.smi)
  (float.o as std/float.o)
  int.smu
  (int.smi as std/int.smi)
  (int.o as std/int.o)
  sys.smu
  (sys.smi as std/sys.smi)
  (sys.o as std/sys.o)
  iter.smu
  (iter.smi as std/iter.smi)
  (iter.o as std/iter.o)
  rc.smu
  (rc.smi as std/rc.smi)
  (rc.o as std/rc.o)
  unsafe.smu
  (unsafe.smi as std/unsafe.smi)
  (unsafe.o as std/unsafe.o)
  fmt.smu
  (fmt.smi as std/fmt.smi)
  (fmt.o as std/fmt.o)
  schubfach.smu
  (schubfach.smi as std/schubfach.smi)
  (schubfach.o as std/schubfach.o)
  set.smu
  (set.smi as std/set.smi)
  (set.o as std/set.o)
  libc.smu
  (libc.smi as std/libc.smi)
  (libc.o as std/libc.o)))
